[package]
name = "altcaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"]}
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["rustls", "ws", "abigen"]  }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

